# roscoe-robot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  spec.md
_meta/: rules.md  tag_vocab.md
bot/: config.py  cost_cap.py  db.py  enrichment.py  filers.py  intake.py  llm.py  main.py  media.py  midjourney.py  processor.py  scheduler.py  scraper.py  summary.py  triage.py  vision.py
deploy/: deploy.sh  personal-os-v2.service
docs/superpowers/plans/: 2026-05-05-session-2-capture-pipe.md  2026-05-06-session-3-process-pipe.md  2026-05-10-session-4-triage-vision-x-scraper.md  2026-05-12-session-5-cron-autonomy.md  2026-05-12-session-6-video-storage.md  (+4 more)
migrations/: 001_initial_schema.sql  002_allow_discarded_status.sql  002_source_posts_and_corrections_extension.sql
scripts/: migrate_media_into_vault.py  setup_dropbox_oauth.py  triage_test.py
tests/: conftest.py  test_config.py  test_cost_cap.py  test_cron.py  test_db.py  test_enrichment.py  test_filers.py  test_intake.py  test_llm.py  test_media.py  test_midjourney.py  test_processor.py  test_scheduler.py  test_scraper.py  test_summary.py  test_triage.py  test_vision.py  test_webhook.py
tests/fixtures/: classifier_response_design.json  classifier_response_text.json  og_html_basic.html  og_html_no_meta.html  update_forward.json  update_link.json  update_photo_no_caption.json  update_photo_with_caption.json  update_process_command.json  update_text.json  update_unauthorized_sender.json  update_video.json  update_voice.json  whisper_response.json  youtube_transcript.json
(+2 files in other folders)
